@@ -42,6 +42,9 @@ PHP                                                                        NEWS
 
 - MBString:
   . mb_detect_encoding is better able to identify the correct encoding for Turkish text. (Alex Dowad)
+  . mb_detect_encoding's "non-strict" mode now behaves as described in the
+    documentation. Previously, it would return false if the very first byte
+    of the input string was invalid in all candidate encodings. (Alex Dowad)
 
 - Opcache:
   . Added start, restart and force restart time to opcache's
